# xed-restore-tabs-plugin

./: .gitignore  README.md  create-deb.sh  meson.build
build-aux/: post_install.py
data/: com.github.tudo75.xed-restore-tabs-plugin.gschema.xml  meson.build  restore-tabs-plugin.desktop.in
debian/: changelog  control  copyright  debhelper-build-stamp  rules
missing-xed-headers/: Xed-1.0.h
missing-xed-headers/xed/: xed-enum-types.h  xed-marshal.h  xed-resources.h
po/: LINGUAS  POTFILES  en.po  it.po  meson.build
src/: meson.build  restore-tabs.vala
vapi/: Xed-1.0.gir  create-vapi.sh  xed.deps  xed.vapi
